# baiq

./: Cargo.toml  README.md  rust-toolchain
baiq-cli/: Cargo.toml
baiq-cli/src/: main.rs
baiq-gui/: Cargo.toml
baiq-gui/src/: main.rs
baiq-web/: Cargo.toml  Rocket.toml
baiq-web/pub/: normalize.css  style.css
baiq-web/src/: main.rs
rocket_json/: Cargo.toml
rocket_json/src/: lib.rs
