[package]
authors = ["Brayden Banks <bb010g@gmail.com>"]
description = "Command-line BAI query tool"
license = "MIT/Apache-2.0"
name = "baiq"
readme = "README.md"
repository = "https://github.com/bb010g/baimax.git"
version = "0.1.0"

[dependencies]
chrono = "0.3.1"
clap = "~2.24.0"
serde = "1.0.8"
serde_json = "1.0.2"

[dependencies.baimax]
path = "../baimax"

[dependencies.clippy]
optional = true
version = "*"

[dependencies.penny]
path = "../penny"

[features]
default = []
lint = ["clippy"]
