[package]
authors = ["Brayden Banks <bb010g@gmail.com>"]
categories = []
description = "Command-line BAI query tool"
keywords = ["bai"]
license = "MIT/Apache-2.0"
name = "baiq-cli"
readme = "README.md"
repository = "https://github.com/bb010g/baiq"
version = "0.1.0"
workspace = ".."

[badges]

[badges.travis-ci]
repository = "bb010g/baiq"

[dependencies]
baimax = "0.1.0"
chrono = "0.4.0"
clap = "~2.24.0"
itertools = "0.6.0"
nom = "3.1.0"
penny = "0.1.0"
serde = "1.0.8"
serde_json = "1.0.2"

[dependencies.clippy]
optional = true
version = "^0"

[features]
default = []
lint = ["clippy"]
